c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/compound_assignment_for_loop.c
int main(void) {
    int i = 1;
    for (i *= -1; i >= -100; i -=3)
        ;
    return (i == -103);
}