c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/paren_mismatch.c
int main(void) {
    for (int i = 2; ))
        int a = 0;
}